first-kube-manifest/example/service.yml
apiVersion: v1
kind: Service

metadata:
  name: demo

spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: demo
  type: ClusterIP
