first-kube-manifest/example/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: demo-ingress
spec:
    rules:
      - http:
            paths:
              - path: /demo
                pathType: Prefix
                backend:
                  service:
                    name: demo
                    port: 
                      number: 9999
